deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svg-validator
  namespace: svg-validator
spec:
  type: ClusterIP
  selector:
    app: svg-validator
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
