deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svg-validator
  namespace: svg-validator
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: algorithms.pointr.cloud
    http:
      paths:
      - path: /svg-validator(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: svg-validator
            port:
              number: 80
